--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -11,3 +11,6 @@ block content
         h3 Bienvenue au Resto-Rally
         p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
     div#slide6.slideImage
+
+    script.
+        var myAddress = "Rue Peetermans 80, 4100 Seraing, Belgique"
