--- a/_mockUp/src/styl/ITCSS/objects/_objects.navigation.styl
+++ b/_mockUp/src/styl/ITCSS/objects/_objects.navigation.styl
@@ -4,11 +4,15 @@
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 ///*------------------------------------*\
-//    #GENERIC NORMALIZE
+//    #OBJECTS NAVIGATION
 //\*------------------------------------*/
 
 
 
 
-// Kouto-swis library normalize
-normalize()
+// Header navigation menu
+.header__nav
+    text-align center
+
+.nav__element
+    display inline-block
