--- a/_mockUp/src/styl/ITCSS/settings/_settings.font-face.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.font-face.styl
@@ -11,12 +11,22 @@
 
 
 // Init personnal Font
-font-face( "RochterQuote", "fonts/Rochter/Rochester-Regular.otf", normal )
+@font-face
+    font-family: "RochterQuote"
+    src: url( "fonts/Rochter/Rochester-Regular.otf" )
 
-font-face( "RobotoLabeur", "fonts/Roboto/Roboto-Light.ttf", lighter )
+@font-face
+    font-family: "RobotoLabeur"
+    src: url( "fonts/Roboto/Roboto-Light.ttf" )
 
-font-face( "RobotoBold", "fonts/Roboto/Roboto-Bold.ttf", bold )
+@font-face
+    font-family: "RobotoBold"
+    src: url( "fonts/Roboto/Roboto-Bold.ttf" )
 
-font-face( "RobotoNav", "fonts/Roboto/Roboto-Regular.ttf", normal )
+@font-face
+    font-family: "RobotoNav"
+    src: url( "fonts/Roboto/Roboto-Regular.ttf" )
 
-font-face( "RobotoHeading", "fonts/Roboto/Roboto-Thin.ttf", lighter )
+@font-face
+    font-family: "RobotoHeading"
+    src: url( "fonts/Roboto/Roboto-Thin.ttf" )
