--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -22,8 +22,10 @@
 @import "ITCSS/base/_base.heading.styl"
 
 // - Objects
+@import "ITCSS/objects/_objects.navigation.styl"
 
 // - Components
+@import "ITCSS/components/_components.header.styl"
 
 // - Trumps
 @import "ITCSS/trumps/_trumps.widths.styl"
