--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -5,33 +5,23 @@
 */
 @font-face {
   font-family: "RochterQuote";
-  font-weight: normal;
-  src: url("fonts/Rochter/Rochester-Regular.otf.eot");
-  src: url("fonts/Rochter/Rochester-Regular.otf.eot?#iefix") format("embedded-opentype"), url("fonts/Rochter/Rochester-Regular.otf.woff2") format("woff2"), url("fonts/Rochter/Rochester-Regular.otf.woff") format("woff"), url("fonts/Rochter/Rochester-Regular.otf.ttf") format("truetype"), url("fonts/Rochter/Rochester-Regular.otf.svg#RochterQuote") format("svg");
+  src: url("fonts/Rochter/Rochester-Regular.otf");
 }
 @font-face {
   font-family: "RobotoLabeur";
-  font-weight: lighter;
-  src: url("fonts/Roboto/Roboto-Light.ttf.eot");
-  src: url("fonts/Roboto/Roboto-Light.ttf.eot?#iefix") format("embedded-opentype"), url("fonts/Roboto/Roboto-Light.ttf.woff2") format("woff2"), url("fonts/Roboto/Roboto-Light.ttf.woff") format("woff"), url("fonts/Roboto/Roboto-Light.ttf.ttf") format("truetype"), url("fonts/Roboto/Roboto-Light.ttf.svg#RobotoLabeur") format("svg");
+  src: url("fonts/Roboto/Roboto-Light.ttf");
 }
 @font-face {
   font-family: "RobotoBold";
-  font-weight: bold;
-  src: url("fonts/Roboto/Roboto-Bold.ttf.eot");
-  src: url("fonts/Roboto/Roboto-Bold.ttf.eot?#iefix") format("embedded-opentype"), url("fonts/Roboto/Roboto-Bold.ttf.woff2") format("woff2"), url("fonts/Roboto/Roboto-Bold.ttf.woff") format("woff"), url("fonts/Roboto/Roboto-Bold.ttf.ttf") format("truetype"), url("fonts/Roboto/Roboto-Bold.ttf.svg#RobotoBold") format("svg");
+  src: url("fonts/Roboto/Roboto-Bold.ttf");
 }
 @font-face {
   font-family: "RobotoNav";
-  font-weight: normal;
-  src: url("fonts/Roboto/Roboto-Regular.ttf.eot");
-  src: url("fonts/Roboto/Roboto-Regular.ttf.eot?#iefix") format("embedded-opentype"), url("fonts/Roboto/Roboto-Regular.ttf.woff2") format("woff2"), url("fonts/Roboto/Roboto-Regular.ttf.woff") format("woff"), url("fonts/Roboto/Roboto-Regular.ttf.ttf") format("truetype"), url("fonts/Roboto/Roboto-Regular.ttf.svg#RobotoNav") format("svg");
+  src: url("fonts/Roboto/Roboto-Regular.ttf");
 }
 @font-face {
   font-family: "RobotoHeading";
-  font-weight: lighter;
-  src: url("fonts/Roboto/Roboto-Thin.ttf.eot");
-  src: url("fonts/Roboto/Roboto-Thin.ttf.eot?#iefix") format("embedded-opentype"), url("fonts/Roboto/Roboto-Thin.ttf.woff2") format("woff2"), url("fonts/Roboto/Roboto-Thin.ttf.woff") format("woff"), url("fonts/Roboto/Roboto-Thin.ttf.ttf") format("truetype"), url("fonts/Roboto/Roboto-Thin.ttf.svg#RobotoHeading") format("svg");
+  src: url("fonts/Roboto/Roboto-Thin.ttf");
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
@@ -248,7 +238,7 @@ a:hover {
 *
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
-html {
+body {
   font-size: 16px;
   font-size: 1rem;
   line-height: 1.25;
@@ -351,6 +341,74 @@ h6,
 h6:first-child,
 .zeta:first-child {
   padding-top: 0;
+}
+/*
+* CSS Methodology based on InuitCSS, used for my owned workflow
+*
+* https://github.com/LSPanda | http://portfolio.simon-leyder.be
+*/
+.header__nav {
+  text-align: center;
+}
+.nav__element {
+  display: inline-block;
+}
+/*
+* CSS Methodology based on InuitCSS, used for my owned workflow
+*
+* https://github.com/LSPanda | http://portfolio.simon-leyder.be
+*/
+.header__nav {
+  position: fixed;
+  width: 100%;
+  background: #3498db;
+  padding: 8px 0;
+  padding: 0.5rem 0rem;
+  margin-top: 24px;
+  margin-top: 1.5rem;
+  z-index: 1;
+}
+.header__nav--stick {
+  margin-top: 0;
+  -webkit-transition: all 0.5s;
+  -moz-transition: all 0.5s;
+  -ms-transition: all 0.5s;
+  transition: all 0.5s;
+}
+.nav {
+  border-top: 2px solid #fbfbfb;
+  border-bottom: 2px solid #fbfbfb;
+}
+.nav__element {
+  font-family: "RobotoNav", sans-serif;
+  font-size: 20px;
+  font-size: 1.25rem;
+  text-transform: uppercase;
+  padding: 16px 0;
+  padding: 1rem 0rem;
+  margin: 0 12px;
+  margin: 0rem 0.75rem;
+}
+.element__link {
+  color: #fff;
+  text-decoration: none;
+}
+.element__link:hover {
+  color: #fff;
+  padding-bottom: 4px;
+  padding-bottom: 0.25rem;
+  border-bottom: 1px solid #fff;
+}
+.banners {
+  position: relative;
+  width: 160px;
+  width: 10rem;
+}
+.banners__link {
+  position: absolute;
+  top: -128px;
+  top: -8rem;
+  left: 0;
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
