--- a/_mockUp/src/jade/evenements.jade
+++ b/_mockUp/src/jade/evenements.jade
@@ -6,11 +6,11 @@ block title
     title Resto Rallye - Accueil
 
 block content
-    div#slideMap.slideImage
-    div.slideText.addText    
-        h3 Bienvenue au Resto-Rally
+    div#slideMap.parallax__img
+    div.parallax__body.addText    
+        h3.gamma Bienvenue au Resto-Rally
         p  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sit, quos reiciendis numquam accusamus qui aut autem eaque maxime voluptate tempore incidunt enim, placeat sunt ipsum minus, officiis culpa molestiae architecto.
-    div#slide6.slideImage
+    div.parallax__img.parallax__img--six
 
     script.
         var myAddress = "Rue Peetermans 80, 4100 Seraing, Belgique"
