--- a/_mockUp/src/jade/includes/footer.jade
+++ b/_mockUp/src/jade/includes/footer.jade
@@ -1,9 +1,9 @@
 // - includes/footer.jade
 
-div.slideText.myFooter
+div.parallax__body.myFooter
     footer
         section.nav
-            h4 Navigation
+            h5.epsilon Navigation
             ul
                 li
                     a(href="html/evenements.html") Événements
@@ -14,7 +14,7 @@ div.slideText.myFooter
                 li
                     a(href="html/contact.html") Contact
         section.looking
-            h4 Notre adresse
+            h5.epsilon Notre adresse
             p
                 span Mail&nbsp;: 
                 a(href="mailto adress@gmail.com") adress@gmail.com
@@ -22,14 +22,14 @@ div.slideText.myFooter
                 span Téléphone&nbsp;: 
                 | 0476 34 21 67                                            
         section.follow
-            h4 Suivez-nous
+            h5.epsilon Suivez-nous
             ul
                 li.fb
                     a(href="#") Facebook
                 li.rss
                     a(href="#") RSS
         section.newsletter
-            h4 NewsLetter
+            h5.epsilon NewsLetter
             form#ancreError
                 input(type="text" placeholder="votre@mail.com")
                 input(type="submit" value="S'inscrire")
