--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -30,8 +30,8 @@ wf_quote-color                  =    #eaeaea
 wf_error-color                  =    #c0392b
 
 // Background colors.
-wf_background-color             =    #ffffff
 wf_background-header            =    #3498db
+wf_background-parallax          =    #ffffff
 wf_background-footer            =    #ffffff
 
 // Border colors
