--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -23,9 +23,11 @@
 
 // - Objects
 @import "ITCSS/objects/_objects.navigation.styl"
+@import "ITCSS/objects/_objects.parallax.styl"
 
 // - Components
 @import "ITCSS/components/_components.header.styl"
+@import "ITCSS/components/_components.parallax.styl"
 
 // - Trumps
 @import "ITCSS/trumps/_trumps.widths.styl"
