--- a/_mockUp/src/styl/ITCSS/components/_components.header.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.header.styl
@@ -10,17 +10,15 @@
 
 
 
-// Font settings.
+// Header Style
 .header__nav
     position fixed
     width 100%
+    text-align center
     background wf_background-header
     rem-fallback( padding, 8px 0 )
-    rem-fallback( margin-top, 24px )
+    rem-fallback( margin-top, 8px )
     z-index 1
-.header__nav--stick
-    margin-top 0
-    transition( all, 0.5s )
 
 .nav
     border-top 2px solid wf_border-menu
@@ -45,5 +43,5 @@
     rem-fallback( width, 160px )
 .banners__link
     position absolute
-    rem-fallback( top, -128px )
+    rem-fallback( top, -158px )
     left 0
