--- a/_mockUp/src/styl/ITCSS/objects/_objects.inline-block.styl
+++ b/_mockUp/src/styl/ITCSS/objects/_objects.inline-block.styl
@@ -4,15 +4,12 @@
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 ///*------------------------------------*\
-//    #OBJECTS NAVIGATION
+//    #OBJECTS INLINE-BLOCK
 //\*------------------------------------*/
 
 
 
 
-// Header navigation menu
-.header__nav
-    text-align center
-
-.nav__element
+// Inline-block element
+.inline-block
     display inline-block
