--- a/_mockUp/src/jade/includes/header.jade
+++ b/_mockUp/src/jade/includes/header.jade
@@ -5,14 +5,14 @@ header.header
     nav.header__nav
         div.nav
             h2.hiddenTitle Menu de navigation du site
-            span.nav__element
+            span.inline-block.nav__element
                 a(href="evenements.html").element__link Événements
-            span.nav__element
+            span.inline-block.nav__element
                 a(href="blog.html").element__link Actualités
-            span.nav__element.banners
+            span.inline-block.banners
                 a(href="index.html").banners__link
                     img(src="../css/images/Ecusson.png", alt="Banners Resto Rallye")
-            span.nav__element
+            span.inline-block.nav__element
                 a(href="restaurants.html").element__link Restaurants
-            span.nav__element
+            span.inline-block.nav__element
                 a(href="contact.html").element__link Contact
