--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -22,7 +22,7 @@
 @import "ITCSS/base/_base.heading.styl"
 
 // - Objects
-@import "ITCSS/objects/_objects.navigation.styl"
+@import "ITCSS/objects/_objects.inline-block.styl"
 @import "ITCSS/objects/_objects.parallax.styl"
 
 // - Components
