--- a/_mockUp/src/jade/includes/footer.jade
+++ b/_mockUp/src/jade/includes/footer.jade
@@ -34,7 +34,7 @@ div.parallax__body.myFooter
                 input(type="text" placeholder="votre@mail.com")
                 input(type="submit" value="S'inscrire")
                 span.error Il y a une faute de frappe bitchies
-        div.designed
+        div.signature
             p
                 | Designed and created by&nbsp;
                 a(href="http://luc-matagne.be/Portfolio/") Luc Matagne
