--- a/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
+++ b/_mockUp/src/styl/ITCSS/settings/_settings.default.styl
@@ -37,6 +37,7 @@ wf_background-footer            =    #ffffff
 // Border colors
 wf_border-menu                  =    #fbfbfb
 wf_border-error                 =    #c0392b
+wf_border-error-opacity         =    rgba(194, 47, 43, 0)
 
 // Forms settings
 wf_form-background-color        =    #eeeeee
