--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -20,6 +20,7 @@
 @import "ITCSS/base/_base.list.styl"
 @import "ITCSS/base/_base.images.styl"
 @import "ITCSS/base/_base.heading.styl"
+@import "ITCSS/base/_base.mine.styl"
 
 // - Objects
 @import "ITCSS/objects/_objects.inline-block.styl"
@@ -28,6 +29,8 @@
 // - Components
 @import "ITCSS/components/_components.header.styl"
 @import "ITCSS/components/_components.parallax.styl"
+@import "ITCSS/components/_components.footer.styl"
+@import "ITCSS/components/_components.errors.styl"
 
 // - Trumps
 @import "ITCSS/trumps/_trumps.widths.styl"
