--- a/_mockUp/src/styl/ITCSS/base/_base.paragraph.styl
+++ b/_mockUp/src/styl/ITCSS/base/_base.paragraph.styl
@@ -4,13 +4,12 @@
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 ///*------------------------------------*\
-//    #OBJECTS INLINE-BLOCK
+//    #BASE PARAGRAPH
 //\*------------------------------------*/
 
 
 
 
-// Inline-block element
-.inline-block
-    display inline-block
-    vertical-align top
+// Comportements of all my paragraph
+p
+    rem-fallback( margin-bottom, 12px )
