--- a/_mockUp/src/styl/ITCSS/components/_components.footer.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.footer.styl
@@ -11,3 +11,9 @@
 
 
 // Footer Style
+.newsletter
+    float right
+
+.hightlight
+    rem-fallback( font-size, 14px )
+    font-family wf_font-bold
