--- a/_mockUp/src/styl/ITCSS/objects/_objects.block.styl
+++ b/_mockUp/src/styl/ITCSS/objects/_objects.block.styl
@@ -4,13 +4,12 @@
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 ///*------------------------------------*\
-//    #OBJECTS INLINE-BLOCK
+//    #OBJECTS BLOCK
 //\*------------------------------------*/
 
 
 
 
 // Inline-block element
-.inline-block
-    display inline-block
-    vertical-align top
+.block
+    display block
