--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -16,6 +16,7 @@
 
 // - Base
 @import "ITCSS/base/_base.link.styl"
+@import "ITCSS/base/_base.paragraph.styl"
 @import "ITCSS/base/_base.page.styl"
 @import "ITCSS/base/_base.list.styl"
 @import "ITCSS/base/_base.images.styl"
@@ -24,13 +25,15 @@
 
 // - Objects
 @import "ITCSS/objects/_objects.inline-block.styl"
+@import "ITCSS/objects/_objects.block.styl"
 @import "ITCSS/objects/_objects.parallax.styl"
 
 // - Components
 @import "ITCSS/components/_components.header.styl"
 @import "ITCSS/components/_components.parallax.styl"
 @import "ITCSS/components/_components.footer.styl"
-@import "ITCSS/components/_components.errors.styl"
+@import "ITCSS/components/_components.extern-link.styl"
+@import "ITCSS/components/_components.forms.styl"
 
 // - Trumps
 @import "ITCSS/trumps/_trumps.widths.styl"
