--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -238,6 +238,15 @@ a:hover {
 *
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
+p {
+  margin-bottom: 12px;
+  margin-bottom: 0.75rem;
+}
+/*
+* CSS Methodology based on InuitCSS, used for my owned workflow
+*
+* https://github.com/LSPanda | http://portfolio.simon-leyder.be
+*/
 body {
   font-size: 16px;
   font-size: 1rem;
@@ -348,8 +357,8 @@ h6:first-child,
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 .signature {
-  font-size: 12px;
-  font-size: 0.75rem;
+  font-size: 14px;
+  font-size: 0.875rem;
   font-style: italic;
   padding-top: 32px;
   padding-top: 2rem;
@@ -362,6 +371,15 @@ h6:first-child,
 */
 .inline-block {
   display: inline-block;
+  vertical-align: top;
+}
+/*
+* CSS Methodology based on InuitCSS, used for my owned workflow
+*
+* https://github.com/LSPanda | http://portfolio.simon-leyder.be
+*/
+.block {
+  display: block;
 }
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
@@ -431,8 +449,8 @@ h6:first-child,
 }
 .banners__link {
   position: absolute;
-  top: -158px;
-  top: -9.875rem;
+  top: -128px;
+  top: -8rem;
   left: 0;
 }
 /*
@@ -468,11 +486,92 @@ h6:first-child,
 *
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
+.newsletter {
+  float: right;
+}
+.hightlight {
+  font-size: 14px;
+  font-size: 0.875rem;
+  font-family: "RobotoBold", sans-serif;
+}
 /*
 * CSS Methodology based on InuitCSS, used for my owned workflow
 *
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
+.social__link {
+  width: 35px;
+  width: 2.1875rem;
+  height: 35px;
+  height: 2.1875rem;
+  text-indent: -1000000px;
+  text-indent: -62500rem;
+  margin-right: 8px;
+  margin-right: 0.5rem;
+}
+.social__link--fb {
+  width: 100%;
+  height: 100%;
+  background: url("images/sprite.png") -50px -50px;
+}
+.social__link--fb:hover {
+  background: url("images/sprite.png") -50px -10px;
+}
+.social__link--rss {
+  width: 100%;
+  height: 100%;
+  background: url("images/sprite.png") -10px -50px;
+}
+.social__link--rss:hover {
+  background: url("images/sprite.png") -10px -10px;
+}
+/*
+* CSS Methodology based on InuitCSS, used for my owned workflow
+*
+* https://github.com/LSPanda | http://portfolio.simon-leyder.be
+*/
+.forms__newsletter {
+  position: relative;
+}
+.newsletter__submit {
+  position: absolute;
+  width: 25px;
+  width: 1.5625rem;
+  height: 25px;
+  height: 1.5625rem;
+  background: url("images/arrow.png") no-repeat center;
+  top: 7px;
+  top: 0.4375rem;
+  right: 5px;
+  right: 0.3125rem;
+  border: none;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  border-radius: 0.5rem;
+  text-indent: -1000000px;
+  text-indent: -62500rem;
+}
+.newsletter__submit:hover {
+  cursor: pointer;
+}
+.forms,
+.input__text {
+  width: 100%;
+  background-color: #eee;
+  padding: 12px 24px;
+  padding: 0.75rem 1.5rem;
+  border: none;
+  -webkit-border-radius: 0.5rem;
+  -moz-border-radius: 0.5rem;
+  -ms-border-radius: 0.5rem;
+  border-radius: 0.5rem;
+}
+.forms:focus,
+.input__text:focus {
+  background-color: #f5f5f5;
+  outline: none;
+}
 .error {
   position: relative;
   display: block;
