--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -4,11 +4,38 @@
 * https://github.com/LSPanda | http://portfolio.simon-leyder.be
 */
 ///*------------------------------------*\
-//    #COMPONENTS ERRORS
+//    #COMPONENTS FORMS
 //\*------------------------------------*/
 
 
 
+
+// Forms
+.forms__newsletter
+    position relative
+.newsletter__submit
+    position absolute
+    rem-fallback( width, 25px )
+    rem-fallback( height, 25px )
+    background url("images/arrow.png") no-repeat center
+    rem-fallback( top, 7px )
+    rem-fallback( right, 5px )
+    border none
+    border-radius( 0.5rem )
+    rem-fallback( text-indent, -1000000px )
+    &:hover
+        cursor pointer
+
+.forms
+.input__text
+    width 100%
+    background-color wf_form-background-color
+    rem-fallback( padding, 12px 24px )
+    border none
+    border-radius( 0.5rem )
+    &:focus
+        background-color wf_form-background-color-focus
+        outline none
 
 // Errors for forms
 .error
