--- a/_mockUp/bin/css/main.css
+++ b/_mockUp/bin/css/main.css
@@ -291,6 +291,8 @@ h1,
   font-size: 2.6179375rem;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
+  margin-bottom: 14px;
+  margin-bottom: 0.875rem;
 }
 h1:first-child,
 .alpha:first-child {
@@ -302,6 +304,8 @@ h2,
   font-size: 2.1418125rem;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
+  margin-bottom: 14px;
+  margin-bottom: 0.875rem;
 }
 h2:first-child,
 .beta:first-child {
@@ -313,6 +317,8 @@ h3,
   font-size: 1.618rem;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
+  margin-bottom: 14px;
+  margin-bottom: 0.875rem;
 }
 h3:first-child,
 .gamma:first-child {
@@ -324,6 +330,8 @@ h4,
   font-size: 1.32375rem;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
+  margin-bottom: 7px;
+  margin-bottom: 0.4375rem;
 }
 h4:first-child,
 .delta:first-child {
@@ -335,6 +343,8 @@ h5,
   font-size: 1rem;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
+  margin-bottom: 7px;
+  margin-bottom: 0.4375rem;
 }
 h5:first-child,
 .epsilon:first-child {
@@ -346,6 +356,8 @@ h6,
   font-size: 0.818125rem;
   padding: 24px 0 12px 0;
   padding: 1.5rem 0rem 0.75rem 0rem;
+  margin-bottom: 7px;
+  margin-bottom: 0.4375rem;
 }
 h6:first-child,
 .zeta:first-child {
