--- a/_mockUp/src/jade/includes/footer.jade
+++ b/_mockUp/src/jade/includes/footer.jade
@@ -2,7 +2,7 @@
 
 div.parallax__body.myFooter
     footer
-        section.inline-block.one-sixth
+        section.inline-block.footer__information
             h5.delta Navigation
             ul
                 li
@@ -14,7 +14,7 @@ div.parallax__body.myFooter
                 li
                     a(href="contact.html") Contact
         
-        section.inline-block.one-sixth
+        section.inline-block.footer__information
             h5.delta Notre adresse
             p
                 span.block.hightlight Mail&nbsp;: 
@@ -23,14 +23,14 @@ div.parallax__body.myFooter
                 span.block.hightlight Téléphone&nbsp;: 
                 | 0476 34 21 67                                            
     
-        section.inline-block.one-sixth
+        section.inline-block.footer__information
             h5.delta Suivez-nous
             span.inline-block.social__link
                 a(href="#").block.social__link--fb Facebook
             span.inline-block.social__link
                 a(href="#").block.social__link--rss RSS
         
-        section.inline-block.one-fifth.newsletter
+        section.inline-block.footer__newsletter
             h5.delta NewsLetter
             form#ancreError.forms__newsletter
                 input(type="text" placeholder="votre@mail.com").input__text
