--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -7,9 +7,9 @@ block title
 
 block content
     div.parallax__img.parallax__img--one   
-        blockquote 
+        blockquote.quote 
             | Ne manquez pas notre prochain 
-            a(href="html/evenements.html") Rendez-vous 
+            a(href="html/evenements.html").quote__link Rendez-vous 
             | dans la région de Namur
     div.parallax__body.addText
         h3.gamma Bienvenue au Resto-Rally
@@ -21,36 +21,36 @@ block content
     div.parallax__img.parallax__img--two  
     div.parallax__body.addDL
         h3.gamma Programme type de la soirée
-        dl.inline-block.one-half
-            dt 18.30 - 19.30
+        dl.inline-block.programme
+            dt.hightlight 18.30 - 19.30
             dd Réception des Resto Rallyens au lieu d’accueil
-            dt 19.30 - 19.45
+            dt.hightlight 19.30 - 19.45
             dd Déplacement des Resto Rallyens vers les différents restaurants
-            dt 19.45 - 20.30
+            dt.hightlight 19.45 - 20.30
             dd Entrée froide
-            dt 20.30 - 20.45
+            dt.hightlight 20.30 - 20.45
             dd Déplacement des Resto Rallyens vers les différents restaurants
-        dl.inline-block.one-half
-            dt 20.45 - 21.30
+        dl.inline-block.programme
+            dt.hightlight 20.45 - 21.30
             dd Entrée chaude
-            dt 21.30 - 21.45
+            dt.hightlight 21.30 - 21.45
             dd Déplacementx des Resto Rallyens vers les différents restaurants
-            dt 21.45 - 22.30
+            dt.hightlight 21.45 - 22.30
             dd Plat principal
-            dt 22.30 - …
+            dt.hightlight 22.30 - …
             dd Retour au lieu d’accueil pour café, pousse et dessert
             
     div.parallax__img.parallax__img--three  
     div.parallax__body.addText
         h3.gamma Le tarif par participant s'élève à 60 €, ce prix comprend
         ul.tarif
-            li L'apéro et ses zakouskis
-            li L'entrée froide
-            li L'entrée chaude
-            li Le plat principal
-            li Le café et son dessert
-            li Le pousse-café
-            li + un verre de vin et d'eau dans chaque restaurant
+            li.tarif__element L'apéro et ses zakouskis
+            li.tarif__element L'entrée froide
+            li.tarif__element L'entrée chaude
+            li.tarif__element Le plat principal
+            li.tarif__element Le café et son dessert
+            li.tarif__element Le pousse-café
+            li.tarif__element + un verre de vin et d'eau dans chaque restaurant
             
     div.parallax__img.parallax__img--four
     div.parallax__body
