--- a/_mockUp/src/styl/ITCSS/tools/_tools.mixins.styl
+++ b/_mockUp/src/styl/ITCSS/tools/_tools.mixins.styl
@@ -53,3 +53,10 @@ box-shadows( angle, blur, color, opa )
     -moz-box-shadow:    angle angle blur 0px rgba(color, color, color, opa)
     -ms-box-shadow:     angle angle blur 0px rgba(color, color, color, opa)
     box-shadow:         angle angle blur 0px rgba(color, color, color, opa)
+
+// Add prefix for `text-shadows` rules
+text-shadows( angle, blur, color, opa )
+    -webkit-text-shadow: angle angle blur rgba(color, color, color, opa)
+    -moz-text-shadow:    angle angle blur rgba(color, color, color, opa)
+    -ms-text-shadow:     angle angle blur rgba(color, color, color, opa)
+    text-shadow:         angle angle blur rgba(color, color, color, opa)
