--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -29,10 +29,11 @@
 @import "ITCSS/objects/_objects.parallax.styl"
 
 // - Components
+@import "ITCSS/components/_components.specifics.styl"
+@import "ITCSS/components/_components.extern-link.styl"
 @import "ITCSS/components/_components.header.styl"
 @import "ITCSS/components/_components.parallax.styl"
 @import "ITCSS/components/_components.footer.styl"
-@import "ITCSS/components/_components.extern-link.styl"
 @import "ITCSS/components/_components.forms.styl"
 
 // - Trumps
