--- a/_mockUp/src/styl/ITCSS/components/_components.footer.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.footer.styl
@@ -11,9 +11,8 @@
 
 
 // Footer Style
-.newsletter
+.footer__information
+    width 16.666666%
+.footer__newsletter
     float right
-
-.hightlight
-    rem-fallback( font-size, 14px )
-    font-family wf_font-bold
+    width 20%
