--- a/_mockUp/src/styl/main.styl
+++ b/_mockUp/src/styl/main.styl
@@ -35,6 +35,7 @@
 @import "ITCSS/components/_components.parallax.styl"
 @import "ITCSS/components/_components.footer.styl"
 @import "ITCSS/components/_components.forms.styl"
+@import "ITCSS/components/_components.restaurants.styl"
 
 // - Trumps
 @import "ITCSS/trumps/_trumps.widths.styl"
