--- a/_mockUp/src/jade/main.jade
+++ b/_mockUp/src/jade/main.jade
@@ -63,7 +63,7 @@ block content
                     h4.delta 
                         | Chez René, 
                         span Liège
-                    img(src="../css/images/exempleRest.jpg", alt="").restaurants__img
+                    img(src="../css/images/mockUp/exempleRest.jpg").restaurants__img
             - numberItem++
     
     div.parallax__img.parallax__img--five    
