--- a/_mockUp/src/styl/ITCSS/components/_components.forms.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.forms.styl
@@ -17,8 +17,8 @@
     position absolute
     rem-fallback( width, 25px )
     rem-fallback( height, 25px )
-    background url("images/arrow.png") no-repeat center
-    rem-fallback( top, 7px )
+    background: url("images/sprite.png") -90px -10px
+    rem-fallback( top, 9px )
     rem-fallback( right, 5px )
     border none
     border-radius( 0.5rem )
