--- a/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
+++ b/_mockUp/src/styl/ITCSS/components/_components.parallax.styl
@@ -19,15 +19,15 @@
 // Parallax images
 // - main.jade
 .parallax__img--one
-    background: url("images/backgroundImage.jpg") center fixed no-repeat
+    background: url("images/parallax/backgroundImage.jpg") center fixed no-repeat
 .parallax__img--two
-    background: url("images/backgroundImage1.jpg") center fixed no-repeat
+    background: url("images/parallax/backgroundImage1.jpg") center fixed no-repeat
 .parallax__img--three
-    background: url("images/backgroundImage2.jpg") center fixed no-repeat
+    background: url("images/parallax/backgroundImage2.jpg") center fixed no-repeat
 .parallax__img--four
-    background: url("images/backgroundImage3.jpg") center fixed no-repeat
+    background: url("images/parallax/backgroundImage3.jpg") center fixed no-repeat
 .parallax__img--five
-    background: url("images/backgroundImage4.jpg") center fixed no-repeat
+    background: url("images/parallax/backgroundImage4.jpg") center fixed no-repeat
 // - evenements.jade
 .parallax__img--six
-    background: url("images/backgroundImage5.jpg") center fixed no-repeat
+    background: url("images/parallax/backgroundImage5.jpg") center fixed no-repeat
